fixed spacing issues after endEvals guide;

--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -403,10 +403,10 @@ $text-color: white;
 
         flex-grow: 1;
 
-        padding: 1%;
+        padding: 0;
         font-family: $dashboard-font;
         font-size: 20px;
-        margin: 0 0 2rem 0;
+        margin: 0;
 
         // background: -webkit-linear-gradient(#eb8952 50%, #eb8952 100%);
         // -webkit-background-clip: text;
